# streamdeck_tui

./: Makefile  README.md  pyproject.toml
src/streamdeck_tui/: __init__.py  __main__.py  app.py  cli.py  config.py  database.py  log_viewer.py  logging_utils.py  player.py  playlist.py  providers.py  stats.py  streamdeck.css  themes.py
tests/: test_app.py  test_cli.py  test_config.py  test_database.py  test_logging_utils.py  test_player.py  test_playlist.py  test_providers.py  test_resources.py  test_stats.py
